Fix wrap css

--- a/components/coupon-area/coupon-area.module.css
+++ b/components/coupon-area/coupon-area.module.css
@@ -14,6 +14,7 @@
   gap: 1rem;
   margin-right: auto;
   align-items: center;
+  white-space: nowrap;
 }
 
 .button {
